services/ping/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ping-server
  name: ping-server
  namespace: ping
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ping-server
  type: NodePort
status:
  loadBalancer: {}
